--- a/conf.yaml
+++ b/conf.yaml
@@ -1,6 +1,6 @@
 host: 127.0.0.1
 port: 389
-subffix: dc=dolores,dc=org
-rootdn: cn=admin,dc=dolores,dc=org # 注意rootDN的后缀要和上面一致
+subffix: dc=dolores,dc=store
+rootdn: cn=admin,dc=dolores,dc=store # 注意rootDN的后缀要和上面一致
 rootpwd: secret
 companyname: Dolores科技有限公司
