--- a/conf.yaml
+++ b/conf.yaml
@@ -1,8 +1,8 @@
-host: 127.0.0.1
+host: dolores.store
 port: 389
 subffix: dc=dolores,dc=store
 rootdn: cn=admin,dc=dolores,dc=store # 注意rootDN的后缀要和上面一致
-rootpwd: secret
+rootpwd: dolores
 crootdn: cn=config #配置config数据库 dn
-crootpwd: secret #配置config数据库密码
+crootpwd: dolores #配置config数据库密码
 companyname: Dolores科技有限公司
